--- a/static/style.css
+++ b/static/style.css
@@ -49,8 +49,13 @@ input[type="checkbox"] {
   color: white;
   border-color: #0d6efd;
 }
+
 #location-filter-buttons .btn:not(.active) {
   background-color: transparent;
   color: #0d6efd;
   border-color: #0d6efd;
+}
+
+#location-filter-buttons .btn:active {
+  transform: scale(0.97);
 }
